--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ include = [ "nixops_gcp/nix/*.nix" ]
 [tool.poetry.dependencies]
 python = "^3.7"
 apache-libcloud = "^3.0.0"
+cryptography = "^2.9.0"
 nixops = {git = "https://github.com/NixOS/nixops.git", rev = "master"}
 
 [tool.poetry.dev-dependencies]
