--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ python = "^3.7"
 apache-libcloud = "^3.0.0"
 cryptography = "^2.9.0"
 nixops = {git = "https://github.com/NixOS/nixops.git"}
+nixos-modules-contrib = {git = "https://github.com/nix-community/nixos-modules-contrib.git"}
 
 [tool.poetry.dev-dependencies]
 nose = "^1.3.7"
