--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,10 @@ include = [ "nixops_gcp/nix/*.nix" ]
 
 [tool.poetry.dependencies]
 python = "^3.7"
-apache-libcloud = "^3.0.0"
+apache-libcloud = "^3.1.0"
 cryptography = "^2.9.0"
 nixops = {git = "https://github.com/NixOS/nixops.git"}
-nixos-modules-contrib = {git = "https://github.com/nix-community/nixos-modules-contrib.git"}
+#nixos-modules-contrib = {git = "https://github.com/nix-community/nixos-modules-contrib.git"}
 
 [tool.poetry.dev-dependencies]
 nose = "^1.3.7"
