--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,38 +9,43 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2.3.4
       - name: Nix
         uses: cachix/install-nix-action@v12
-      - name: Prefetch shell.nix
-        run: 'nix-shell --run true'
       - name: Parsing
-        run: './ci/check-nix-files.sh'
+        run: 'find . -name "*.nix" -exec nix-instantiate --parse --quiet {} >/dev/null +'
         env:
-          NIX_PATH: "nixpkgs=https://github.com/NixOS/nixpkgs/archive/nixos-unstable.tar.gz"
+          NIX_PATH: "nixpkgs=https://github.com/NixOS/nixpkgs/archive/release-20.09.tar.gz"
   black:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2.3.4
       - name: Nix
         uses: cachix/install-nix-action@v12
-      - name: Prefetch shell.nix
-        run: 'nix-shell --run true'
       - name: Black
-        run: './ci/check-formatting.sh'
+        run: 'nix-shell ./shell.nix --run "black --check ."'
         env:
-          NIX_PATH: "nixpkgs=https://github.com/NixOS/nixpkgs/archive/nixos-unstable.tar.gz"
+          NIX_PATH: "nixpkgs=https://github.com/NixOS/nixpkgs/archive/release-20.09.tar.gz"
   mypy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v2.3.4
       - name: Nix
         uses: cachix/install-nix-action@v12
-      - name: Prefetch shell.nix
-        run: 'nix-shell --run true'
       - name: Mypy
-        run: './ci/check-mypy.sh'
+        run: 'nix-shell ./shell.nix --run "mypy nixops_gcp"'
         env:
-          NIX_PATH: "nixpkgs=https://github.com/NixOS/nixpkgs/archive/nixos-unstable.tar.gz"
+          NIX_PATH: "nixpkgs=https://github.com/NixOS/nixpkgs/archive/release-20.09.tar.gz"
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2.3.4
+      - name: Nix
+        uses: cachix/install-nix-action@v12
+      - name: Build
+        run: 'nix-build -I nixpkgs=channel:release-20.09 --quiet release.nix -A nixops-gcp.x86_64-linux'
+        env:
+          NIX_PATH: "nixpkgs=https://github.com/NixOS/nixpkgs/archive/release-20.09.tar.gz"
