--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,8 @@
 name = "nixops_gcp"
 version = "1.0"
 description = "NixOps backend for Google Cloud Platform"
-authors = ["Amine Chikhaoui <amine.chikhaoui91@gmail.com>"]
+authors = ["Evgeny Egorochkin <phreedom@yandex.ru>"]
+maintainers = ["Amine Chikhaoui <amine@chikhaoui.org>"]
 license = "MIT"
 include = [ "nixops_gcp/nix/*.nix" ]
 
@@ -10,8 +11,8 @@ include = [ "nixops_gcp/nix/*.nix" ]
 python = "^3.7"
 apache-libcloud = "^3.2.0"
 cryptography = "^3.1.1"
-nixops = {git = "https://github.com/NixOS/nixops.git"}
-nixos-modules-contrib = {git = "https://github.com/nix-community/nixos-modules-contrib.git"}
+nixops = {git = "https://github.com/NixOS/nixops.git", rev = "master"}
+nixos-modules-contrib = {git = "https://github.com/nix-community/nixos-modules-contrib.git", rev = "master"}
 
 [tool.poetry.dev-dependencies]
 nose = "^1.3.7"
