--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,16 +8,17 @@ license = "MIT"
 include = [ "nixops_gcp/nix/*.nix" ]
 
 [tool.poetry.dependencies]
-python = "^3.7"
-apache-libcloud = "^3.2.0"
-cryptography = "^3.1.1"
+python = "^3.10"
+apache-libcloud = "^3.7.0"
+# implicit transitive dependency of apache-libcloud
+cryptography = "40.0.1"
 nixops = {git = "https://github.com/NixOS/nixops.git", rev = "master"}
 nixos-modules-contrib = {git = "https://github.com/nix-community/nixos-modules-contrib.git", rev = "master"}
 
 [tool.poetry.dev-dependencies]
 nose = "^1.3.7"
-mypy = "^0.812"
-black = "^19.10b0"
+mypy = "^0.961"
+black = "^22.6.0"
 
 [tool.poetry.plugins."nixops"]
 gcp = "nixops_gcp.plugin"
